// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateService should setTransformer AzFunc 1`] = `
{
  "IsEncrypted": false,
  "Values": {
    "dbConnection": "MySqlServer",
  },
}
`;

exports[`StateService should setTransformer AzFunc Empty 1`] = `
{
  "IsEncrypted": false,
  "Values": {},
}
`;

exports[`StateService should setTransformer AzWebApp 1`] = `
{
  "dbConnection": "MySqlServer",
}
`;

exports[`StateService should setTransformer AzWebApp Empy 1`] = `{}`;

exports[`StateService should setTransformer DockerEnv 1`] = `"dbConnection=MySqlServer"`;

exports[`StateService should setTransformer DockerEnv Empty 1`] = `""`;
